# django-firebird

./: .gitignore  AUTHORS  LICENSE  README.md  README.rst  cleanpyc  notes.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
django_firebird/: expressions.py  operations.py
django_reddatabase/: __init__.py  compiler.py  features.py  introspection.py  operations.py
docs/: changelog.txt  notes.txt
firebird/: __init__.py  base.py  client.py  compiler.py  creation.py  expressions.py  features.py  introspection.py  operations.py  schema.py  validation.py  version.py
tests/test_main/: manage.py
tests/test_main/datatypes/: models.py  tests.py
tests/test_main/dates/: models.py  tests.py
tests/test_main/datetimes/: models.py  tests.py
tests/test_main/expressions/: models.py  tests.py
tests/test_main/inspectdb/: models.py  tests.py
tests/test_main/introspection/: models.py  tests.py
tests/test_main/lookup/: models.py  tests.py
tests/test_main/many_to_one/: models.py  tests.py
tests/test_main/model_fields/: models.py  test_binaryfield.py  test_decimalfield.py  test_durationfield.py  test_floatfield.py  test_foreignkey.py  test_imagefield.py  test_integerfield.py  test_promises.py  test_uuid.py  tests.py
tests/test_main/schema/: fields.py  models.py  test_logging.py  tests.py
tests/test_main/test_base/: models.py  tests.py
tests/test_main/test_main/: settings.py  urls.py  wsgi.py
tests/test_main/transactions/: models.py  tests.py
